# gitsplode

./: .gitmodules  Cargo.toml
.github/workflows/: continuous_integration.yml
git/: Cargo.toml
git-sys/: Cargo.toml  build.rs
git-sys-header/: Cargo.toml
git-sys-header/src/: error.rs  filter.rs  item.rs  lib.rs
git-sys/src/: git-sys.h  lib.rs  version.toml
git-sys/src/bindings/: attr.toml  gettext.toml  repository.toml  version.toml
git/src/: lib.rs
gitsplode/: Cargo.toml
gitsplode/benches/: version.rs
gitsplode/src/: main.rs
