[package]
name = "git-sys-header"
version = "0.1.0"
authors = ["chip <chip@chip.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindgen = "0.52"
toml = "0.5"

[dependencies.serde]
version = "1"
features = ["derive"]